# cruzible

./: .env.example  .gitattributes  .gitignore  .mailmap  .prettierignore  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  Cruzible Attack Playbook.md  Dockerfile  IMPROVEMENTS_REPORT.md  README.md  SECURITY.md  eslint.config.mjs  jest.config.js  jest.polyfills.js  jest.setup.js  next-sitemap.config.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vitest.config.ts  vitest.setup.ts
.github/workflows/: ci-cd.yml  security-audit.yml
backend/: .env.example  README.md
backend/api/: Dockerfile  package-lock.json  package.json  postcss.config.js  vitest.config.ts
backend/api/prisma/: schema.prisma
backend/api/src/: index.ts  indexer.ts  server.ts
backend/api/src/auth/: middleware.ts  service.ts
backend/api/src/config/: index.ts  swagger.ts
backend/api/src/lib/: protocolEpoch.ts  protocolSdk.ts
backend/api/tests/: alertService.test.ts  appServer.test.ts  auditRoutes.test.ts  auth.test.ts  cacheService.test.ts  config.test.ts  healthReady.test.ts  indexerMaterialization.test.ts  indexerRefreshStablecoinConfig.test.ts  metrics.test.ts  operationalAccess.test.ts  privilegedAudit.test.ts  rateLimiter.test.ts  requestLogger.test.ts  routes.test.ts  scheduler.test.ts  stablecoinBridgeService.test.ts  stablecoinRoutes.test.ts  webSocketManager.test.ts
backend/contracts/: .dockerignore  AUDIT_PACKET.md  Dockerfile  README.md  RELEASE_SIGNING.md  SECURITY_AUDIT.md  SECURITY_COMPLIANCE_REPORT.md  TEST_COVERAGE.md  TEST_SUMMARY.md  audit.toml  security_best_practices_report.md
backend/contracts/.cargo/: audit.toml
backend/contracts/contracts/ai_job_manager/: Cargo.toml
backend/contracts/contracts/ai_job_manager/src/: contract_tests.rs  lib.rs
backend/contracts/deployments/: release-manifest.example.json
backend/contracts/scripts/: prepare-audit-artifacts.sh  sign-audit-artifacts.sh  test-validate-release-manifest.py  validate-release-manifest.py  verify-audit-artifact-signatures.sh
backend/infra/: docker-compose.yml
backend/node/: Cargo.toml
docs/architecture/: 09-storage-oracle-scoping.md  10-security-trust-model.md  11-benchmarking-slos.md  12-public-readiness.md
docs/ops/: environment-reference.md  runbook.md
docs/security/: dependency-exceptions.md
k8s/base/: backend.yaml  frontend.yaml  kustomization.yaml
public/: sitemap-0.xml
sdk/typescript/: package.json
sdk/typescript/src/: keccak.ts  payloads.ts  utils.ts
sdk/typescript/test/: conformance.test.ts
src/__tests__/: api-config.test.ts  api-health.test.ts  contracts-config.test.ts  protocol-preview.test.ts  search.test.ts  stablecoin-registry.test.ts  validators.test.ts
src/__tests__/components/: GlassCard.test.tsx
src/__tests__/hooks/: useVault.test.ts
src/__tests__/utils/: formatting.test.ts
src/components/: EmptyState.tsx  ErrorBoundary.tsx  LaunchReadinessPage.tsx  PagePrimitives.tsx  SEOHead.tsx  SharedComponents.tsx  Skeleton.tsx  WalletButton.tsx
src/config/: abis.ts  api.ts  chains.ts  contracts.ts  wagmi.ts
src/contexts/: AppContext.tsx
src/hooks/: useStablecoinBridge.ts  useTransaction.ts  useVault.ts
src/lib/: allowance.ts  api.ts  constants.ts  models.ts  protocol.ts  reconciliation.ts  seals.ts  search.ts  utils.ts  validators.ts
src/mocks/: handlers.ts  server.ts
src/pages/: 404.tsx  _app.tsx  _document.tsx  _error.tsx  devtools.tsx  index.tsx  reconciliation.tsx
src/pages/api/: health.ts
src/pages/governance/: index.tsx
src/pages/jobs/: [id].tsx  index.tsx
src/pages/models/: [modelHash].tsx  index.tsx
src/pages/seals/: [id].tsx  index.tsx
src/pages/stablecoins/: index.tsx
src/pages/validators/: [address].tsx  index.tsx
src/pages/vault/: index.tsx
src/styles/: globals.css
src/types/: wagmi-connectors.d.ts
test-vectors/: generate-expected.ts
test-vectors/edge-cases/: single-validator.json
test-vectors/reconciliation/: default.json
test-vectors/reward/: default.json
test-vectors/validator-selection/: default.json
(+53 files in other folders)
