[package]
name = "aethelred-node"
version = "1.0.0"
edition = "2021"
authors = ["Aethelred Labs <dev@aethelred.org>"]
description = "Aethelred Sovereign AI Verification Blockchain Node"
license = "Apache-2.0"
repository = "https://github.com/aethelred/aethelred-node"
rust-version = "1.75"

[workspace]
members = [
    "crates/*",
]

[dependencies]
# Core blockchain
tendermint = "0.34"
tendermint-abci = "0.34"
tendermint-proto = "0.34"
tendermint-rpc = { version = "0.34", features = ["http-client", "websocket-client"] }

# Consensus - Proof of Useful Work
consensus = { path = "crates/consensus" }

# Cryptography
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
secp256k1 = { version = "0.28", features = ["global-context", "rand-std", "recovery"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = "2.0"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
ring = "0.17"

# TEE Attestation
sgx-quote = "0.1"
tdx-quote = "0.1"
az-snp-vtpm = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
prost = "0.12"
borsh = { version = "1.3", features = ["derive"] }

# Database
rocksdb = { version = "0.21", features = ["multi-threaded-cf"] }
redb = "1.5"

# Networking
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tonic = "0.11"
tower = "0.4"
libp2p = { version = "0.53", features = [
    "tokio",
    "tcp",
    "dns",
    "noise",
    "yamux",
    "gossipsub",
    "kad",
    "identify",
    "ping",
] }
quinn = "0.10"
rustls = { version = "0.22", features = ["quic"] }

# Consensus & BFT
hotstuff = { path = "crates/hotstuff" }
bft-core = { path = "crates/bft-core" }

# WASM for smart contracts
wasmer = { version = "4.2", features = ["cranelift", "singlepass"] }
wasmer-compiler-cranelift = "4.2"
wasmtime = "24.0.7"

# AI/ML Verification
tract-onnx = "0.21"
candle-core = { git = "https://github.com/huggingface/candle", version = "0.3" }
candle-nn = { git = "https://github.com/huggingface/candle", version = "0.3" }
ndarray = "0.15"

# Metrics & Observability
prometheus = "0.13"
opentelemetry = { version = "0.21", features = ["metrics"] }
opentelemetry-prometheus = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
tracing-opentelemetry = "0.22"

# Configuration & CLI
clap = { version = "4.4", features = ["derive", "env"] }
config = "0.14"
dotenvy = "0.15"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Async
futures = "0.3"
async-trait = "0.1"
dashmap = "5.5"
parking_lot = "0.12"

# Time & Scheduling
tokio-cron-scheduler = "0.9"
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"

# Utilities
hex = "0.4"
base64 = "0.22"
bs58 = "0.5"
uuid = { version = "1.7", features = ["v4", "serde"] }
url = "2.5"
once_cell = "1.19"
regex = "1.10"
rayon = "1.8"

# Testing
tempfile = "3.10"
mockall = "0.12"
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.4"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"

[[bench]]
name = "consensus_bench"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.production]
inherits = "release"
debug = false
