[package]
name = "ai-job-manager"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-storage = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
schemars = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
cosmwasm-schema = { workspace = true }
model-registry = { path = "../model_registry", features = ["library"] }
